--- a/src/hct_mis_api/apps/dashboard/templates/dashboard/includes/metric_cards.html
+++ b/src/hct_mis_api/apps/dashboard/templates/dashboard/includes/metric_cards.html
@@ -3,6 +3,9 @@
     <h3 class="text-xs font-bold">
         <span class="icon icon-financing icon-blue"></span>
         {% translate "Total Amount Paid" %}
+        <span class="info-icon" id="info-icon-total-amount-paid" aria-label="Info about Total Amount Paid">ⓘ
+            <div class="tooltip" id="tooltip-total-amount-paid" role="tooltip">{% translate "Sum of USD value for payments that are Delivered Fully or Delivered Partially." %}</div>
+        </span>
     </h3>
     <div id="total-amount-paid" class="text-cyan-700  text-base font-bold"></div>
 </div>
@@ -18,6 +21,9 @@
     <h3 class="text-xs font-bold">
         <span class="icon icon-financing icon-blue"></span>
         {% translate "Outstanding Payment" %}
+        <span class="info-icon" id="info-icon-outstanding-payment" aria-label="Info about Outstanding Payment">ⓘ
+            <div class="tooltip" id="tooltip-outstanding-payment" role="tooltip">{% translate "Sum of USD value for payments that are Sent to Payment Gateway, Sent to FSP, or Pending." %}</div>
+        </span>
     </h3>
     <div id="outstanding-payments" class="text-cyan-700  text-base font-bold"></div>
 </div>
@@ -57,6 +63,9 @@
     <h3 class="text-sm font-bold">
         <span class="icon icon-report icon-blue"></span>
         {% translate "Reconciliation" %}
+        <span class="info-icon" id="info-icon-reconciliation" aria-label="Info about Reconciliation">ⓘ
+            <div class="tooltip" id="tooltip-reconciliation" role="tooltip">{% translate "Reconciliation percentage is the total count of reconciled payments divided by the total number of payments. A payment is considered reconciled if it has an associated payment verification record in the database." %}</div>
+        </span>
     </h3>
     <div class="text-cyan-700 text-base font-bold reconciliation-percentage">%</div>
     <p class="text-xs italic">{% translate "of payments reconciled" %}</p>
@@ -65,6 +74,9 @@
     <h3 class="text-sm font-bold">
         <span class="icon icon-report icon-blue"></span>
         {% translate "Verification" %}
+        <span class="info-icon" id="info-icon-verification" aria-label="Info about Verification">ⓘ
+            <div class="tooltip" id="tooltip-verification" role="tooltip">{% translate "Verification percentage represents the ratio of the number of finished Payment Plans to the total number of Payment Plans, for the data currently displayed in the dashboard (after filters are applied). A Payment Plan is considered \"finished\" for this calculation if it has an associated \"FINISHED\" PaymentVerificationPlan status ." %}</div>
+        </span>
     </h3>
     <div class="text-cyan-700  text-base font-bold  pending-reconciliation-percentage">%</div>
     <p class="text-xs italic">{% translate "of payments plans verified" %}</p>
