--- a/src/hct_mis_api/apps/dashboard/templates/dashboard/includes/metric_cards.html
+++ b/src/hct_mis_api/apps/dashboard/templates/dashboard/includes/metric_cards.html
@@ -64,11 +64,14 @@
         <span class="icon icon-report icon-blue"></span>
         {% translate "Reconciliation" %}
         <span class="info-icon" id="info-icon-reconciliation" aria-label="Info about Reconciliation">ⓘ
-            <div class="tooltip" id="tooltip-reconciliation" role="tooltip">{% translate "Reconciliation percentage is the total count of reconciled payments divided by the total number of payments. A payment is considered reconciled if it has an associated payment verification record in the database." %}</div>
+            <div class="tooltip" id="tooltip-reconciliation" role="tooltip">{% translate "Reconciliation percentage is the ratio of the count of payments (with statuses: Sent to Payment Gateway, Sent to FSP, Distribution Successful, Partially Distributed, or Transaction Successful) to the total count of all payments." %}</div>
         </span>
     </h3>
-    <div class="text-cyan-700 text-base font-bold reconciliation-percentage">%</div>
-    <p class="text-xs italic">{% translate "of payments reconciled" %}</p>
+    <div class="text-cyan-700 text-base font-bold">
+        <span class="reconciliation-percentage-value"></span>%
+        
+    </div>
+    <p class="text-xs italic">{% translate "of payments reconciled" %} (<span class="reconciliation-amount-value"></span> USD)</p>
 </div>
 <div class="col-span-1 bg-white p-4 rounded shadow flex flex-col justify-center items-center">
     <h3 class="text-sm font-bold">
