--- a/src/hct_mis_api/apps/dashboard/templates/dashboard/includes/metric_cards.html
+++ b/src/hct_mis_api/apps/dashboard/templates/dashboard/includes/metric_cards.html
@@ -46,7 +46,7 @@
         <span class="icon icon-people-targeted icon-blue"></span>
         {% translate "Individuals Reached" %}
         <span class="info-icon" id="info-icon-individuals-reached" aria-label="Info about Individuals Reached">ⓘ
-            <div class="tooltip" id="tooltip-individuals-reached" role="tooltip">{% translate "Total count of individuals within households that have received payments." %}</div>
+            <div class="tooltip" id="tooltip-individuals-reached" role="tooltip">{% translate "This is an approximate figure on individuals registered. For more accuracy, check programme-specific statistics" %}</div>
         </span>
     </h3>
     <div id="individuals-reached" class="text-cyan-700  text-base font-bold"></div>
